# bigfile

./: CMakeLists.txt  cmake
bigfile/: BigFile.cpp  BigFile.h  CMakeLists.txt  FileError.cpp  FileError.h  FileExtension.cpp  FileExtension.h  FileInfo.cpp  FileInfo.h  FileInterface.h  FileSystem.h  Gpg.cpp  SmallFile.cpp  SmallFile.h  StdioFile.cpp  StdioFile.h  Zlib.cpp  Zlib.h
test/: CMakeLists.txt  TestStdioFile.cpp
test/big_file/: CMakeLists.txt  TestBigFile.cpp
test/file_ext/: CMakeLists.txt  TestFileExt.cpp
test/small_file/: CMakeLists.txt  TestSmallFile.cpp
test/stdio_file/: CMakeLists.txt  TestStdioFile.cpp
